Fix horizontal scroll

--- a/source/sass/blocks/question-form.scss
+++ b/source/sass/blocks/question-form.scss
@@ -48,6 +48,10 @@
   color: $color-alice-blue;
 }
 
+.question-form input[type="checkbox"] {
+  width: auto;
+}
+
 .question-form textarea {
   width: 100%;
   margin-top: 10px;
